--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "turbo-stream": "^3.1.0"
   },
   "devDependencies": {
