--- a/client/chatbot/package.json
+++ b/client/chatbot/package.json
@@ -1,6 +1,5 @@
 {
-  "devDependencies": 
-  {
+  "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8"
